[tool.poetry]
name = "ingy-backend"
version = "0.1.0"
description = ""
authors = ["briskdust <briskdust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
flask-cors = "^4.0.0"
tabulate = "^0.9.0"
boofuzz = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
